--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "<maijaaaw@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon ./src/index.ts"
+    "start": "nodemon ./src/app.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -16,6 +16,16 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/cors": "^2.8.12",
+    "@types/lodash": "^4.14.176",
+    "@types/nanoid": "^3.0.0",
+    "@types/pino": "^6.3.12",
+    "cors": "^2.8.5",
+    "dayjs": "^1.10.7",
+    "express": "^4.17.1",
+    "lodash": "^4.17.21",
+    "nanoid": "^3.1.30",
+    "pino": "^7.0.5",
+    "pino-pretty": "^7.1.0"
   }
 }
