--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,9 @@
     "dayjs": "^1.10.7",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
+    "mysql": "^2.18.1",
     "nanoid": "^3.1.30",
+    "pg": "^8.7.1",
     "pino": "^7.0.5",
     "pino-pretty": "^7.1.0"
   }
