--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@types/pino": "^6.3.12",
     "cors": "^2.8.5",
     "dayjs": "^1.10.7",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "mysql": "^2.18.1",
