--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "@types/node": "^16.11.6",
     "nodemon": "^2.0.14",
     "ts-node": "^10.4.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "@types/pg": "^8.6.3"
   },
   "dependencies": {
     "@types/cors": "^2.8.12",
