--- a/server/package.json
+++ b/server/package.json
@@ -6,15 +6,23 @@
   "author": "<maijaaaw@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon ./src/app.ts"
+    "start": "nodemon ./src/index.ts",
+    "predev": "npm run swagger",
+    "prebuild": "npm run swagger",
+    "build": "tsc",
+    "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec\"",
+    "swagger": "tsoa spec"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.6",
+    "@types/pg": "^8.6.3",
+    "@types/swagger-ui-express": "^4.1.3",
+    "concurrently": "^7.0.0",
     "nodemon": "^2.0.14",
     "ts-node": "^10.4.0",
-    "typescript": "^4.4.4",
-    "@types/pg": "^8.6.3"
+    "typescript": "^4.4.4"
   },
   "dependencies": {
     "@types/cors": "^2.8.12",
@@ -26,10 +34,22 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nanoid": "^3.1.30",
     "pg": "^8.7.1",
     "pino": "^7.0.5",
-    "pino-pretty": "^7.1.0"
+    "pino-pretty": "^7.1.0",
+    "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.3.0",
+    "tsoa": "^3.14.1",
+    "typeorm": "^0.2.41"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "src"
+    ],
+    "ext": "ts",
+    "exec": "ts-node src/index.ts"
   }
 }
