--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
     "name": "client",
     "version": "0.1.0",
     "private": true,
+    "proxy": "http://localhost:8000",
     "dependencies": {
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^12.0.0",
@@ -11,6 +12,7 @@
         "@types/react": "^17.0.20",
         "@types/react-dom": "^17.0.9",
         "add": "^2.0.6",
+        "axios": "^0.24.0",
         "classnames": "^2.3.1",
         "i18next": "^21.6.4",
         "i18next-browser-languagedetector": "^6.1.2",
