--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/lodash": "^4.14.176",
     "@types/nanoid": "^3.0.0",
     "@types/pino": "^6.3.12",
@@ -34,6 +35,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "google-auth-library": "^7.11.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
