--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,7 +8,10 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "typeRoots": [
+      "./src/global-types"
+    ]
   },
   "exclude":[
     "./node_modules"
