--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
         "@types/react-dom": "^17.0.9",
         "add": "^2.0.6",
         "axios": "^0.24.0",
+        "chart.js": "^3.7.1",
         "classnames": "^2.3.1",
         "i18next": "^21.6.4",
         "i18next-browser-languagedetector": "^6.1.2",
